Added hover effect to plot

--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
 
         <section class="row">
             <!-- Controls section. -->
-            <div id="controls" class="col-lg-3 col-md-4 col-sm-12 r">
+            <div id="controls" class="col-lg-3 col-sm-12 r">
 
                 <!-- Form elements. -->
                 <div class="control-group r">
@@ -53,7 +53,7 @@
 
 
             <!-- Plot section. -->
-            <div id="plot" class="col-lg-8 col-md-8 col-sm-12 col-lg-offset-1 text-center shadow r">{{ plot }}</div>
+            <div id="plot" class="col-lg-8 col-sm-12 col-lg-offset-1 text-center shadow r">{{ plot }}</div>
         </section>
 
 
@@ -63,7 +63,7 @@
         <footer class="row">
             <div class="col-md-12 text-center">
                 Source code available on GitHub @ <a
-                    href="https://github.com/mihaiconstantin/workshop-building-r-packages">mihaiconstantin/reliability-measurement-error</a>.
+                    href="https://github.com/mihaiconstantin/reliability-measurement-error">mihaiconstantin/reliability-measurement-error</a>.
             </div>
         </footer>
 
