Refactor: change reliability formula to use `LaTeX`

--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
                 <hr>
 
                 <div class="formula text-center r">
-                    R<sub>XX</sub> = <sup>S<sup>2</sup><sub>T</sub></sup>&frasl;<sub>S<sup>2</sup><sub>X</sub></sub> = <sup>S<sup>2</sup><sub>T</sub></sup>&frasl;(<sub>S<sup>2</sup><sub>T</sub></sub> + <sub>S<sup>2</sup><sub>E</sub></sub>)
+                    {{ reliability.formula }}
                 </div>
 
                 <hr>
