--- a/www/index.html
+++ b/www/index.html
@@ -62,8 +62,10 @@
         <!-- Footer. -->
         <footer class="row">
             <div class="col-md-12 text-center">
-                Source code available on GitHub @ <a
-                    href="https://github.com/mihaiconstantin/reliability-measurement-error">mihaiconstantin/reliability-measurement-error</a>.
+                Source code available on GitHub @
+                <a href="https://github.com/mihaiconstantin/reliability-measurement-error">
+                    mihaiconstantin/reliability-measurement-error
+                </a>.
             </div>
         </footer>
 
